<resources>
    <string name="app_name">SqlSDv30</string>

    <string name="txtnameInsert">Ingrese datos</string>
    <string name="btnserch">Serch</string>
    <string name="btnsave">Save</string>
    <string name="btnconsult">Consult</string>

    <string name="txtid">Código del producto</string>
    <string name="txtDescri">Descripción del producto</string>
    <string name="txtprecio">Precio del producto</string>

    <string name="btnsRegister">Register product</string>
    <string name="btnsserch">serch product</string>
    <string name="btnModify">Modify product</string>
    <string name="btnEliminate">eliminate product</string>

    //Botónes principales para accion de hacerlo

    <string name="btnRegistersProducts">PRODUCTO</string>
    <string name="btncorreoCalculador">NEXT</string>


    // Activity from linear Layout Action Button
    <string name="txtgmail">Correo electronico</string>
    <string name="txtpass">Contraseña</string>
    <string name="btningresar">INGRESAR</string>

    // Activity from calculador video 35

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>

    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eigth">8</string>
    <string name="nine">9</string>
    <string name="Cero">0</string>

    <string name="restar">-</string>
    <string name="sumar">+</string>
    <string name="multiplicar">*</string>
    <string name="dividir">/</string>
    <string name="resultado">=</string>

    <string name="btnrestaurarValores">C</string>
    <string name="TextView">0</string>




</resources>